--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>  
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="UajuMoCH2t-doXRkYyf8cB4LGqx7Td-hb4kyyEABtn4" />
-    <title>lalit- devloper portfolio</title>
+    <title>Lalit suthar-web devloper & editor</title>
+    <meta name="description" content="welcome to lalit suthar's official portfolio. web devloper,editor & student at sp college, Rajasthan.">
     <link rel="preconnect" href="https://fonts.googleapis.com/">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
     <link href="./lalit- devloper portfolio_files/css2" rel="stylesheet">
