--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="welcome to lalit suthar's official portfolio. web devloper,editor & student at sp college, Rajasthan.">
     <link rel="preconnect" href="https://fonts.googleapis.com/">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
+    <link rel="icon" type="image/png" href="favicon.png"/>
     <link href="./lalit- devloper portfolio_files/css2" rel="stylesheet">
 
     
@@ -22,6 +23,24 @@
       
         size: 6px;
       }
+
+
+      @media (max-width: 600px) {
+  .help-container {
+    padding: 16px 8px;
+    max-width: 100%;
+    margin: 20px 5px;
+  }
+  h1 {
+    font-size: 1.4em;
+  }
+  .back-btn {
+    width: 100%;
+    text-align: center;
+    padding: 10px 0;
+  }
+}
+
       nav {
         display: flex;
         justify-content: space-around;
