--- a/index.html
+++ b/index.html
@@ -181,19 +181,19 @@
       <div class="right">
         <ul>
           <li>
-            <a href="https://www.google.com/">home</a>
+            <a href="https://www.google.com/">Home</a>
           </li>
           <li>
-            <a href="https://www.google.com/">about</a>
+            <a href="https://www.google.com/">About</a>
           </li>
           <li>
-            <a href="https://www.google.com/">skills</a>
+            <a href="https://www.google.com/">Skills</a>
           </li>
           <li>
-            <a href="https://www.google.com/">services</a>
+            <a href="https://www.google.com/">Services</a>
           </li>
           <li>
-            <a href="https://www.google.com/">contact me</a>
+            <a href="https://www.google.com/">Contact me</a>
           </li>
         </ul>
       </div>
