--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         Hello, I am <span class="purple">Lalit Suthar</span><br>
         And I'm a <span id="element">Video Editor</span>
         <div class="buttons">
-          <a href="myresume.jpg"><button class="btn">Download Resume</button></a>
+          <a href="myresume.jpg"</a> <button class="btn">Download Resume</button></a>
           <a href="https://github.com/lalitsuthar45"><button class="btn">Contact Me</button></a>
         </div>
       </div>
