--- a/index.html
+++ b/index.html
@@ -192,12 +192,7 @@
     <section class="firstsection">
       <div class="leftsection">
         Hello, I am <span class="purple">Lalit Suthar</span><br>
-        And I am a BCA student studying in sp college sirohi affilaited to mohanlal sukhadiya univercity udaipur.
-        a passionate self-taught web developer from India.
-    I specialize in creating fast, responsive, and user-friendly websites using HTML, CSS, and JavaScript.
-    I'm constantly learning and love building things that solve real-world problems.
-
-        I'm a <span id="element">Video Editor</span>
+        I'am <span id="element">Video Editor</span>
         <div class="buttons">
           <a href="myresume.jpg"</a> <button class="btn">Download Resume</button></a>
           <a href="https://github.com/lalitsuthar45"><button class="btn">Contact Me</button></a>
