--- a/index.html
+++ b/index.html
@@ -64,16 +64,20 @@
       margin-top: 20px;
     }
 
-    .btn {
-      padding: 12px 20px;
-      margin: 10px;
-      color: white;
-      background-color: #1e2167;
-      border: 2px solid white;
-      border-radius: 6px;
-      font-size: 14px;
-      cursor: pointer;
-    }
+   .btn {
+  padding: 12px 20px;
+  margin: 10px;
+  background-color: #1e1267;
+  color: white;
+  text-decoration: none;
+  border-radius: 6px;
+  display: inline-block;
+  font-size: 16px;
+}
+.btn:hover {
+  background-color: #0056b3;
+}
+
 
     .rightsection {
       flex: 1 1 300px;
@@ -194,8 +198,9 @@
         Hello, I am <span class="purple">Lalit Suthar</span><br>
         I'am <span id="element">Video Editor</span>
         <div class="buttons">
-          <a href="myresume.jpg"</a> <button class="btn">Download Resume</button></a>
-          <a href="https://github.com/lalitsuthar45"><button class="btn">Contact Me</button></a>
+         <a href="meraresume.pdf" download 
+class="btn">Download Resume</a>
+<a href="contact.html" class="btn">Contact Me</a>
         </div>
       </div>
       <div class="rightsection">
