--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
     <section class="firstsection">
       <div class="leftsection">
         Hello, I am <span class="purple">Lalit Suthar</span><br>
-        I'am <span id="element">Video Editor</span>
+       And I'am <span id="element">Video Editor</span>
         <div class="buttons">
          <a href="meraresume.pdf" download 
 class="btn">Download Resume</a>
