--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ class="btn">Download Resume</a>
         </div>
         <div class="vertical">
           <img class="image-top" src="photo.jpg" alt="">
-          <div class="vertical-title">BCA 1sd year (Present)</div>
+          <div class="vertical-title">BCA 1st year (Present)</div>
           <div class="vertical-desc">SP College, Sirohi (Raj)</div>
         </div>
       </div>
