--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lalit Suthar - Web Developer</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs
+/font-awesome/6.0.0-beta3/css/all.min.css">
+  
   <style>
     * {
       margin: 0;
@@ -176,6 +179,27 @@
         align-items: center;
       }
     }
+
+.social-links{
+      margin-top: 100px;
+    }
+    .social-links h3{
+      font-size: 28px;
+      color: #444;
+      margin-bottom: 10px;
+    }
+    .social-links a {
+  margin: 15px;
+  font-size: 30px;
+  color: #333;
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+.social-links a:hover {
+  color: #ff00ff;
+}
+    
   </style>
 </head>
 <body>
@@ -234,6 +258,13 @@ class="btn">Download Resume</a>
           <div class="vertical-desc">SP College, Sirohi (Raj)</div>
         </div>
       </div>
+      <div class="social-links">
+  <h3> Let's follow and contact me</h3>
+  <a href="https://www.instagram.com/lucky_str_45" target="_blank"><i class="fab fa-instagram"></i></a>
+  <a href="https://www.linkedin.com/in/lalit suthar" target="_blank"><i class="fab fa-linkedin"></i></a>
+  <a href="mailto:sutharlalit791@example.com"><i class="fas fa-envelope"></i></a>
+</div>
+
     </section>
   </main>
 
