--- a/index.html
+++ b/index.html
@@ -185,13 +185,13 @@
     }
     .social-links h3{
       font-size: 28px;
-      color: #444;
+      color: pink;
       margin-bottom: 10px;
     }
     .social-links a {
   margin: 15px;
   font-size: 30px;
-  color: #333;
+  color: white;
   text-decoration: none;
   transition: color 0.3s ease;
 }
