--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
     
     <div class="form-container">
         <h1>contact us</h1>
-    <form action="mailto:lalitsuthar791@gmail.com"method="post"enctype="text/plain">
+    <form action="contactForm'>
         <label for="name">name</label>
         <br><input type="text"id="name"name="name"required><br><br>
         <label for="email">email</label>
