--- a/index.html
+++ b/index.html
@@ -122,11 +122,17 @@
     }
 
     .vertical {
-      background: rgb(25, 22, 27);
+      background: rgb(67, 65, 65);
       padding: 20px;
       max-width: 250px;
       color: white;
       border-radius: 10px;
+      width: 250px;
+      margin: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
 
     .image-top {
@@ -139,8 +145,33 @@
     }
 
     .vertical-desc {
-      font-size: 0.9rem;
-      color: rgb(117, 13, 237);
+      background: #ffffff;
+      width: 100%;
+      height: 35px;
+      border-radius: 5px;
+      padding: 5px 10px;
+      box-sizing: border-box;
+      overflow: hidden;
+      position: relative;
+      margin-top: 10px;
+    }
+
+    .scroll-wrapper {
+      position: absolute;
+      white-space: nowrap;
+      animation: scroll-left 8s linear infinite;
+      color: purple;
+      font-weight: 600;
+      font-size: 1rem;
+    }
+
+    @keyframes scroll-left {
+      0% {
+        left: 100%;
+      }
+      100% {
+        left: -100%;
+      }
     }
 
     /* 🔥 Responsive for Small Devices */
@@ -240,22 +271,30 @@ class="btn">Download Resume</a>
         <div class="vertical">
           <img class="image-top" src="school1.jpg" alt="">
           <div class="vertical-title">6th-8th (2013–2016)</div>
-          <div class="vertical-desc">Aapeshewar Vidya Mandir, Adawada (Raj)</div>
+          <div class="vertical-desc">
+            <div class="scroll-wrapper">Aapeshewar Vidya Mandir, Adawada (Raj)</div>
+          </div>
         </div>
         <div class="vertical">
           <img class="image-top" src="school1.jpg" alt="">
           <div class="vertical-title">4th–10th (2016–2022)</div>
-          <div class="vertical-desc">Adarsh Public Sec. School, Siyana (Raj)</div>
+          <div class="vertical-desc">
+            <div class="scroll-wrapper">Adarsh Public Sec. School, Siyana (Raj)</div>
+          </div>
         </div>
         <div class="vertical">
           <img class="image-top" src="school1.jpg" alt="">
           <div class="vertical-title">11th–12th (2022–2024)</div>
-          <div class="vertical-desc">MG Govt. School, Siyana (Raj)</div>
+          <div class="vertical-desc">
+            <div class="scroll-wrapper">MG Govt. School, Siyana (Raj)</div>
+          </div>
         </div>
         <div class="vertical">
           <img class="image-top" src="photo.jpg" alt="">
           <div class="vertical-title">BCA 1st year (Present)</div>
-          <div class="vertical-desc">SP College, Sirohi (Raj)</div>
+          <div class="vertical-desc">
+            <div class="scroll-wrapper">SP College, Sirohi (Raj)</div>
+          </div>
         </div>
       </div>
       <div class="social-links">
