--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ class="btn">Download Resume</a>
       <div class="social-links">
   <h3> Let's follow and contact me</h3>
   <a href="https://www.instagram.com/lucky_str_45" target="_blank"><i class="fab fa-instagram"></i></a>
-  <a href="https://www.linkedin.com/in/lalit suthar" target="_blank"><i class="fab fa-linkedin"></i></a>
+  <a href="https://www.linkedin.com/in/lalit-suthar-445646334" target="_blank"><i class="fab fa-linkedin"></i></a>
   <a href="mailto:sutharlalit791@example.com"><i class="fas fa-envelope"></i></a>
 </div>
 
