--- a/index.html
+++ b/index.html
@@ -271,30 +271,30 @@ class="btn">Download Resume</a>
       <div class="box">
         <div class="vertical">
           <img class="image-top" src="school1.jpg" alt="">
-          <div class="vertical-title">6th-8th (2013–2016)</div>
+          <div class="vertical-title">1st-4th (2013–2016)</div>
           <div class="vertical-desc">
-            <div class="scroll-wrapper">Aapeshewar Vidya Mandir, Adawada (Raj)</div>
+            <div class="scroll-wrapper">Aapeshewar Vidya Mandir, Adawada. (Raj)</div>
           </div>
         </div>
         <div class="vertical">
           <img class="image-top" src="school1.jpg" alt="">
           <div class="vertical-title">4th–10th (2016–2022)</div>
           <div class="vertical-desc">
-            <div class="scroll-wrapper">Adarsh Public Sec. School, Siyana (Raj)</div>
+            <div class="scroll-wrapper">Adarsh Public Sec. School, Siyana. (Raj)</div>
           </div>
         </div>
         <div class="vertical">
           <img class="image-top" src="school1.jpg" alt="">
           <div class="vertical-title">11th–12th (2022–2024)</div>
           <div class="vertical-desc">
-            <div class="scroll-wrapper">MG Govt. School, Siyana (Raj)</div>
+            <div class="scroll-wrapper">MG Govt. School, Siyana. (Raj)</div>
           </div>
         </div>
         <div class="vertical">
           <img class="image-top" src="photo.jpg" alt="">
           <div class="vertical-title">BCA 1st year (Present)</div>
           <div class="vertical-desc">
-            <div class="scroll-wrapper">SP College, Sirohi (Raj)</div>
+            <div class="scroll-wrapper">SP College, Sirohi. (Raj)</div>
           </div>
         </div>
       </div>
