--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- 
+  <meta charset="UTF-8">
+  
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Lalit Suthar's personal portfolio website. A self-taught web developer and video editor from Rajasthan.">
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://lalitsuthar45.github.io/" />
+  <link rel="sitemap" type="application/xml" title="Sitemap" href="sitemap.xml" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lalit Suthar - Web Developer</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs
-/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   
   <style>
     * {
@@ -31,6 +37,7 @@
 
     .left {
       font-size: 1.5rem;
+      color: #07f2ea;
     }
 
     nav ul {
@@ -52,11 +59,10 @@
     .firstsection {
       display: flex;
       justify-content: center;
-        align-items: center;
+      align-items: center;
       gap: 20px;
       flex-wrap: wrap;
       padding: 40px 20px;
-      flex-wrap: wrap;
     }
 
     .leftsection {
@@ -68,20 +74,20 @@
       margin-top: 20px;
     }
 
-   .btn {
-  padding: 12px 20px;
-  margin: 10px;
-  background-color: #1e1267;
-  color: white;
-  text-decoration: none;
-  border-radius: 6px;
-  display: inline-block;
-  font-size: 16px;
-}
-.btn:hover {
-  background-color: #0056b3;
-}
+    .btn {
+      padding: 12px 20px;
+      margin: 10px;
+      background-color: #1e1267;
+      color: white;
+      text-decoration: none;
+      border-radius: 6px;
+      display: inline-block;
+      font-size: 16px;
+    }
 
+    .btn:hover {
+      background-color: #0056b3;
+    }
 
     .rightsection {
       flex: 1 1 300px;
@@ -123,8 +129,8 @@
     }
 
     .vertical {
-      background:rgb(67, 65, 75); 
-     padding: 20px;
+      background: rgb(67, 65, 75);
+      padding: 20px;
       max-width: 250px;
       color: white;
       border-radius: 10px;
@@ -154,7 +160,6 @@
       box-sizing: border-box;
       overflow: hidden;
       position: relative;
-      margin-top: 10px;
     }
 
     .scroll-wrapper {
@@ -175,7 +180,6 @@
       }
     }
 
-    /* 🔥 Responsive for Small Devices */
     @media (max-width: 768px) {
       nav {
         flex-direction: column;
@@ -212,26 +216,27 @@
       }
     }
 
-.social-links{
+    .social-links {
       margin-top: 100px;
     }
-    .social-links h3{
+
+    .social-links h3 {
       font-size: 25px;
       color: pink;
       margin-bottom: 10px;
     }
-    .social-links a {
-  margin: 15px;
-  font-size: 30px;
-  color: white;
-  text-decoration: none;
-  transition: color 0.3s ease;
-}
 
-.social-links a:hover {
-  color: #ff00ff;
-}
-    
+    .social-links a {
+      margin: 15px;
+      font-size: 30px;
+      color: white;
+      text-decoration: none;
+      transition: color 0.3s ease;
+    }
+
+    .social-links a:hover {
+      color: #ff00ff;
+    }
   </style>
 </head>
 <body>
@@ -252,11 +257,10 @@
     <section class="firstsection">
       <div class="leftsection">
         Hello, I am <span class="purple">Lalit Suthar</span><br>
-       And I'am <span id="element">Video Editor</span>
+        And I'm <span id="element">Video Editor</span>
         <div class="buttons">
-         <a href="meraresume.pdf" download 
-class="btn">Download Resume</a>
-<a href="contact.html" class="btn">Contact Me</a>
+          <a href="meraresume.pdf" download class="btn">Download Resume</a>
+          <a href="contact.html" class="btn">Contact Me</a>
         </div>
       </div>
       <div class="rightsection">
@@ -299,12 +303,11 @@ class="btn">Download Resume</a>
         </div>
       </div>
       <div class="social-links">
-  <h3> Let's follow and contact me</h3>
-  <a href="https://www.instagram.com/lucky_str_45" target="_blank"><i class="fab fa-instagram"></i></a>
-  <a href="https://www.linkedin.com/in/lalit-suthar-445646334" target="_blank"><i class="fab fa-linkedin"></i></a>
-  <a href="mailto:sutharlalit791@example.com"><i class="fas fa-envelope"></i></a>
-</div>
-
+        <h3>Let's follow and contact me</h3>
+        <a href="https://www.instagram.com/lucky_str_45" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/lalit-suthar-445646334" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="mailto:sutharlalit791@example.com"><i class="fas fa-envelope"></i></a>
+      </div>
     </section>
   </main>
 
@@ -320,3 +323,10 @@ class="btn">Download Resume</a>
   </script>
 </body>
 </html>
+
+
+
+
+
+
+
