--- a/index.html
+++ b/index.html
@@ -1,333 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  
-  <!-- SEO Meta Tags -->
-  <meta name="description" content="Lalit Suthar's personal portfolio website. A self-taught web developer and video editor from Rajasthan.">
-  <meta name="robots" content="index, follow" />
-  <link rel="canonical" href="https://lalitsuthar45.github.io/" />
-  <link rel="sitemap" type="application/xml" title="Sitemap" href="sitemap.xml" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lalit Suthar - Web Developer</title>
+    <!-- Tailwind CSS CDN -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Font Awesome CDN for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!-- Font -->
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+        body {
+            font-family: 'Inter', sans-serif;
+        }
+        /* Custom styles for the Typed.js cursor */
+        .typed-cursor {
+            color: #07f2ea;
+            font-size: 2.25rem;
+            animation: blink 1s infinite;
+        }
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lalit Suthar - Web Developer</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      background-color: black;
-      color: rgb(206, 11, 170);
-      font-family: "Poppins", sans-serif;
-    }
-
-    nav {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 10px 20px;
-      background-color: rgb(5, 5, 51);
-      flex-wrap: wrap;
-    }
-
-    .left {
-      font-size: 1.5rem;
-      color: #07f2ea;
-    }
-
-    nav ul {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 15px;
-      list-style: none;
-    }
-
-    nav ul li a {
-      color: #07f2ea;
-      text-decoration: none;
-    }
-
-    nav ul li a:hover {
-      color: rgb(248, 167, 5)
-    }
-
-    .firstsection {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 20px;
-      flex-wrap: wrap;
-      padding: 40px 20px;
-    }
-
-    .leftsection {
-      margin: 0;
-      font-size: 2rem;
-    }
-
-    .buttons {
-      margin-top: 20px;
-    }
-
-    .btn {
-      padding: 12px 20px;
-      margin: 10px;
-      background-color: #1e1267;
-      color: white;
-      text-decoration: none;
-      border-radius: 6px;
-      display: inline-block;
-      font-size: 16px;
-    }
-
-    .btn:hover {
-      background-color: #0056b3;
-    }
-
-    .rightsection {
-      flex: 1 1 300px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .rightsection img {
-      width: 100%;
-      max-width: 300px;
-      margin: 0;
-      filter: blur(5px);
-      box-shadow: 4px 4px 75px rgb(150, 156, 157);
-    }
-
-    main hr {
-      border: none;
-      height: 1px;
-      background-color: #712a4d;
-      margin: 40px 0;
-    }
-
-    .secondsection {
-      padding: 20px;
-      text-align: center;
-    }
-
-    .secondsection h1 {
-      font-size: 1.5rem;
-      margin-bottom: 20px;
-    }
-
-    .box {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 30px;
-    }
-
-    .vertical {
-      background: rgb(67, 65, 75);
-      padding: 20px;
-      max-width: 250px;
-      color: white;
-      border-radius: 10px;
-      width: 250px;
-      margin: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    .image-top {
-      width: 40px;
-    }
-
-    .vertical-title {
-      margin: 10px 0;
-      font-weight: bold;
-    }
-
-    .vertical-desc {
-      background: #ffffff;
-      width: 100%;
-      height: 35px;
-      border-radius: 5px;
-      padding: 5px 10px;
-      box-sizing: border-box;
-      overflow: hidden;
-      position: relative;
-    }
-
-    .scroll-wrapper {
-      position: absolute;
-      white-space: nowrap;
-      animation: scroll-left 8s linear infinite;
-      color: purple;
-      font-weight: 600;
-      font-size: 1rem;
-    }
-
-    @keyframes scroll-left {
-      0% {
-        left: 100%;
-      }
-      100% {
-        left: -100%;
-      }
-    }
-
-    @media (max-width: 768px) {
-      nav {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-
-      nav ul {
-        flex-direction: column;
-        width: 100%;
-      }
-
-      .firstsection {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-      }
-
-      .leftsection {
-        font-size: 1.6rem;
-      }
-
-      .rightsection img {
-        max-width: 90%;
-      }
-
-      .btn {
-        width: 100%;
-        max-width: 200px;
-      }
-
-      .box {
-        flex-direction: column;
-        align-items: center;
-      }
-    }
-
-    .social-links {
-      margin-top: 100px;
-    }
-
-    .social-links h3 {
-      font-size: 25px;
-      color: pink;
-      margin-bottom: 10px;
-    }
-
-    .social-links a {
-      margin: 15px;
-      font-size: 30px;
-      color: white;
-      text-decoration: none;
-      transition: color 0.3s ease;
-    }
-
-    .social-links a:hover {
-      color: #ff00ff;
-    }
-  </style>
+        @keyframes blink {
+            0%, 100% { opacity: 1; }
+            50% { opacity: 0; }
+        }
+    </style>
 </head>
-<body>
-  <header>
-    <nav>
-      <div class="left">Lalit's Portfolio</div>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Skills</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+<body class="bg-gray-900 text-gray-200">
 
-  <main>
-    <section class="firstsection">
-      <div class="leftsection">
-        Hello, I am <span class="purple">Lalit Suthar</span><br>
-        And I'm <span id="element">Video Editor</span>
-        <div class="buttons">
-          <a href="meraresume.pdf" download class="btn">Download Resume</a>
-          <a href="contact.html" class="btn">Contact Me</a>
-        </div>
-      </div>
-      <div class="rightsection">
-        <img src="myimage.jpg" alt="Profile Image">
-      </div>
-    </section>
+    <!-- Header & Navigation -->
+    <header class="sticky top-0 z-50 bg-gray-950/80 backdrop-blur-sm">
+        <nav class="container mx-auto flex flex-col sm:flex-row items-center justify-between p-4 md:px-8 lg:px-16">
+            <div class="text-2xl font-bold text-cyan-400 mb-4 sm:mb-0">
+                Lalit's Portfolio
+            </div>
+            <ul class="flex flex-wrap items-center justify-center space-x-2 sm:space-x-4">
+                <li><a href="#home" class="px-3 py-1 border border-transparent rounded-lg hover:border-amber-400 hover:text-amber-400 transition-colors duration-300">Home</a></li>
+                <li><a href="#about" class="px-3 py-1 border border-transparent rounded-lg hover:border-amber-400 hover:text-amber-400 transition-colors duration-300">About</a></li>
+                <li><a href="#skills" class="px-3 py-1 border border-transparent rounded-lg hover:border-amber-400 hover:text-amber-400 transition-colors duration-300">Skills</a></li>
+                <li><a href="#services" class="px-3 py-1 border border-transparent rounded-lg hover:border-amber-400 hover:text-amber-400 transition-colors duration-300">Services</a></li>
+                <li><a href="#contact" class="px-3 py-1 border border-transparent rounded-lg hover:border-amber-400 hover:text-amber-400 transition-colors duration-300">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-    <hr>
+    <!-- Main Content -->
+    <main>
+        <!-- Hero Section -->
+        <section id="home" class="min-h-screen flex flex-col md:flex-row items-center justify-center p-8 md:p-16 text-center md:text-left">
+            <div class="md:w-1/2 lg:w-2/5 mb-8 md:mb-0 md:mr-12">
+                <h1 class="text-4xl sm:text-5xl lg:text-6xl font-extrabold leading-tight">
+                    Hello, I am <span class="text-fuchsia-600">Lalit Suthar</span><br>
+                    And I'm a <span id="element" class="text-cyan-400"></span>
+                </h1>
+                <div class="mt-8 flex flex-col sm:flex-row gap-4 justify-center md:justify-start">
+                    <a href="meraresume.pdf" download class="btn bg-blue-600 hover:bg-blue-700 text-white font-semibold py-3 px-6 rounded-full transition-colors duration-300 shadow-lg">
+                        Download Resume
+                    </a>
+                    <a href="contact.html" class="btn bg-transparent border-2 border-blue-600 text-blue-400 hover:bg-blue-600 hover:text-white font-semibold py-3 px-6 rounded-full transition-all duration-300 shadow-lg">
+                        Contact Me
+                    </a>
+                </div>
+            </div>
+            <div class="md:w-1/2 lg:w-2/5 flex justify-center items-center">
+                <img src="https://placehold.co/400x400/3B0058/E6E6FA?text=Profile+Image" alt="Profile Image" class="w-full max-w-sm rounded-full border-4 border-fuchsia-600 shadow-2xl shadow-fuchsia-600/50 object-cover aspect-square">
+            </div>
+        </section>
 
-    <section class="secondsection">
-      <h1>My Qualification</h1>
-      <div class="box">
-        <div class="vertical">
-          <img class="image-top" src="school1.jpg" alt="">
-          <div class="vertical-title">1st-4th (2013–2016)</div>
-          <div class="vertical-desc">
-            <div class="scroll-wrapper">Aapeshewar Vidya Mandir, Adawada. (Raj)</div>
-          </div>
-        </div>
-        <div class="vertical">
-          <img class="image-top" src="school1.jpg" alt="">
-          <div class="vertical-title">4th–10th (2016–2022)</div>
-          <div class="vertical-desc">
-            <div class="scroll-wrapper">Adarsh Public Sec. School, Siyana. (Raj)</div>
-          </div>
-        </div>
-        <div class="vertical">
-          <img class="image-top" src="school1.jpg" alt="">
-          <div class="vertical-title">11th–12th (2022–2024)</div>
-          <div class="vertical-desc">
-            <div class="scroll-wrapper">MG Govt. School, Siyana. (Raj)</div>
-          </div>
-        </div>
-        <div class="vertical">
-          <img class="image-top" src="photo.jpg" alt="">
-          <div class="vertical-title">BCA 1st year (Present)</div>
-          <div class="vertical-desc">
-            <div class="scroll-wrapper">SP College, Sirohi. (Raj)</div>
-          </div>
-        </div>
-      </div>
-      <div class="social-links">
-        <h3>Let's follow and contact me</h3>
-        <a href="https://www.instagram.com/lucky_str_45" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="https://www.linkedin.com/in/lalit-suthar-445646334" target="_blank"><i class="fab fa-linkedin"></i></a>
-        <a href="mailto:sutharlalit791@example.com"><i class="fas fa-envelope"></i></a>
-      </div>
-    </section>
-  </main>
+        <hr class="border-t-2 border-fuchsia-800 my-16 mx-auto w-4/5">
 
-  <!-- Typed.js -->
-  <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
-  <script>
-    var typed = new Typed("#element", {
-      strings: ["Graphic Designer", "Video Editor", "Web Designer", "App Developer"],
-      typeSpeed: 50,
-      backSpeed: 50,
-      loop: true
-    });
-  </script>
+        <!-- Skills Section -->
+        <section id="skills" class="py-16 px-8 text-center">
+            <h2 class="text-3xl sm:text-4xl font-bold mb-12 text-fuchsia-400">My Skills</h2>
+            <div class="flex flex-wrap justify-center gap-8">
+                <!-- Skill Card 1: HTML -->
+                <div class="bg-gray-800 p-6 rounded-xl shadow-lg border-2 border-gray-700 w-full sm:w-80 transition-transform transform hover:scale-105">
+                    <div class="flex items-center justify-center mb-4">
+                        <i class="fab fa-html5 text-4xl text-orange-500"></i>
+                    </div>
+                    <div class="text-xl font-bold text-gray-100 mb-2">HTML5</div>
+                    <div class="text-gray-400">
+                        Strong foundation in building structured and semantic web pages.
+                    </div>
+                </div>
+                <!-- Skill Card 2: CSS -->
+                <div class="bg-gray-800 p-6 rounded-xl shadow-lg border-2 border-gray-700 w-full sm:w-80 transition-transform transform hover:scale-105">
+                    <div class="flex items-center justify-center mb-4">
+                        <i class="fab fa-css3-alt text-4xl text-blue-500"></i>
+                    </div>
+                    <div class="text-xl font-bold text-gray-100 mb-2">CSS3 & Tailwind CSS</div>
+                    <div class="text-gray-400">
+                        Proficient in styling and creating modern, responsive designs.
+                    </div>
+                </div>
+                <!-- Skill Card 3: C++ -->
+                <div class="bg-gray-800 p-6 rounded-xl shadow-lg border-2 border-gray-700 w-full sm:w-80 transition-transform transform hover:scale-105">
+                    <div class="flex items-center justify-center mb-4">
+                        <i class="fas fa-terminal text-4xl text-blue-400"></i>
+                    </div>
+                    <div class="text-xl font-bold text-gray-100 mb-2">C++</div>
+                    <div class="text-gray-400">
+                        Experience with object-oriented programming for building robust applications.
+                    </div>
+                </div>
+                <!-- Skill Card 4: C -->
+                <div class="bg-gray-800 p-6 rounded-xl shadow-lg border-2 border-gray-700 w-full sm:w-80 transition-transform transform hover:scale-105">
+                    <div class="flex items-center justify-center mb-4">
+                        <i class="fas fa-file-code text-4xl text-gray-400"></i>
+                    </div>
+                    <div class="text-xl font-bold text-gray-100 mb-2">C</div>
+                    <div class="text-gray-400">
+                        Solid understanding of core programming concepts and low-level system interactions.
+                    </div>
+                </div>
+            </div>
+            
+            <!-- Social Links -->
+            <div id="contact" class="mt-20">
+                <h3 class="text-2xl font-semibold text-pink-500 mb-4">Let's connect!</h3>
+                <div class="flex justify-center space-x-6">
+                    <a href="https://www.instagram.com/lucky_str_45" target="_blank" class="text-gray-400 hover:text-pink-500 transition-colors duration-300">
+                        <i class="fab fa-instagram text-3xl"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/in/lalit-suthar-445646334" target="_blank" class="text-gray-400 hover:text-blue-500 transition-colors duration-300">
+                        <i class="fab fa-linkedin text-3xl"></i>
+                    </a>
+                    <a href="mailto:sutharlalit791@example.com" class="text-gray-400 hover:text-red-500 transition-colors duration-300">
+                        <i class="fas fa-envelope text-3xl"></i>
+                    </a>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <!-- Typed.js -->
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', (event) => {
+            const typed = new Typed("#element", {
+                strings: ["Web Developer", "Video Editor", "Web Designer", "App Developer"],
+                typeSpeed: 50,
+                backSpeed: 50,
+                loop: true
+            });
+        });
+    </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
