--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </div>
             </div>
             <div class="md:w-1/2 lg:w-2/5 flex justify-center items-center">
-                <img src="https://placehold.co/400x400/3B0058/E6E6FA?text=Profile+Image" alt="Profile Image" class="w-full max-w-sm rounded-full border-4 border-fuchsia-600 shadow-2xl shadow-fuchsia-600/50 object-cover aspect-square">
+                <img src="myimage.jpg">
             </div>
         </section>
 
@@ -148,3 +148,4 @@
     </script>
 </body>
 </html>
+
