--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         <hr class="border-t-2 border-fuchsia-800 my-16 mx-auto w-4/5">
 
-        <!-- Skills Section -->
+        <!-- Skills section -->
         <section id="skills" class="py-16 px-8 text-center">
             <h2 class="text-3xl sm:text-4xl font-bold mb-12 text-fuchsia-400">My Skills</h2>
             <div class="flex flex-wrap justify-center gap-8">
@@ -148,4 +148,5 @@
     </script>
 </body>
 </html>
+
 
