--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <!-- Font Awesome CDN for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- Font -->
+
+    <--logo-->
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
+
   
 </head>
 <body class="bg-gray-900 text-gray-200">
@@ -132,6 +136,7 @@
     </script>
 </body>
 </html>
+
 
 
 
