--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
     
-        <link rel="icon" type="image/x-icon" href="favicon.ico">
+        <link rel="icon" type="image/x-icon" href="favicon.ico?v=2">
 
 </head>
 <body class="bg-gray-900 text-gray-200">
@@ -136,6 +136,7 @@
     </script>
 </body>
 </html>
+
 
 
 
