--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
                     <a href="mailto:sutharlalit791@example.com" class="text-gray-400 hover:text-red-500 transition-colors duration-300">
                         <i class="fas fa-envelope text-3xl"></i>
                     </a>
+                    <a href="https://github.com/lalitsuthar45"  class="text-gray-400 hover:text-white transition-colors duration-300">
+                        <i class="fab fa-github text-3xl"></i>
+                    </a>
                 </div>
             </div>
         </section>
@@ -136,6 +139,7 @@
     </script>
 </body>
 </html>
+
 
 
 
