--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="google-site-verification" content="google9c538a2c3ed2c70d.html" />
+
+    
     <title>Lalit Suthar - Web Developer</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -139,6 +142,7 @@
     </script>
 </body>
 </html>
+
 
 
 
