--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="google-site-verification" content="google9c538a2c3ed2c70d.html" />
-
+<meta name="google-site-verification" content="UajuMoCH2t-doXRkYyf8cB4LGqx7Td-hb4kyyEABtn4" />
     
     <title>Lalit Suthar - Web Developer</title>
     <!-- Tailwind CSS CDN -->
@@ -142,6 +141,7 @@
     </script>
 </body>
 </html>
+
 
 
 
