--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header class="sticky top-0 z-50 bg-gray-950/80 backdrop-blur-sm">
         <nav class="container mx-auto flex flex-col sm:flex-row items-center justify-between p-4 md:px-8 lg:px-16">
             <div class="text-2xl font-bold text-cyan-400 mb-4 sm:mb-0">
-                Lalit's Portfolio
+                Lalit suthar
             </div>
             <ul class="flex flex-wrap items-center justify-center space-x-2 sm:space-x-4">
                 <li><a href="#home" class="px-3 py-1 border border-transparent rounded-lg hover:border-amber-400 hover:text-amber-400 transition-colors duration-300">Home</a></li>
@@ -141,6 +141,7 @@
     </script>
 </body>
 </html>
+
 
 
 
