--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Font Awesome CDN for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <!-- Font -->
-
-
     
         <link rel="icon" type="image" href="favicon.png?v=2">
 
+<link rel="canonical" href="https://lalitsuthar45.github.io/" />
+
+    
 </head>
 <body class="bg-gray-900 text-gray-200">
 
@@ -141,6 +141,7 @@
     </script>
 </body>
 </html>
+
 
 
 
