--- a/index.html
+++ b/index.html
@@ -19,21 +19,49 @@
 </head>
 <body class="bg-gray-900 text-gray-200">
 
-    <!-- Header & Navigation -->
-    <header class="sticky top-0 z-50 bg-gray-950/80 backdrop-blur-sm">
-        <nav class="container mx-auto flex flex-col sm:flex-row items-center justify-between p-4 md:px-8 lg:px-16">
-            <div class="text-2xl font-bold text-cyan-400 mb-4 sm:mb-0">
-                Lalit suthar
-            </div>
-            <ul class="flex flex-wrap items-center justify-center space-x-2 sm:space-x-4">
-                <li><a href="#home" class="px-3 py-1 border border-transparent rounded-lg hover:border-amber-400 hover:text-amber-400 transition-colors duration-300">Home</a></li>
-                <li><a href="#about" class="px-3 py-1 border border-transparent rounded-lg hover:border-amber-400 hover:text-amber-400 transition-colors duration-300">About</a></li>
-                <li><a href="#skills" class="px-3 py-1 border border-transparent rounded-lg hover:border-amber-400 hover:text-amber-400 transition-colors duration-300">Skills</a></li>
-                <li><a href="#services" class="px-3 py-1 border border-transparent rounded-lg hover:border-amber-400 hover:text-amber-400 transition-colors duration-300">Services</a></li>
-               
-            </ul>
-        </nav>
-    </header>
+   <!-- Header -->
+<header class="sticky top-0 z-50 bg-gray-950/80 backdrop-blur-sm">
+  <nav class="container mx-auto flex flex-col sm:flex-row items-center justify-between p-4 md:px-8 lg:px-16">
+    <div class="flex items-center space-x-3">
+      <!-- Hamburger Icon (Left) -->
+      <button id="menu-btn" class="text-gray-300 hover:text-cyan-400 text-2xl mr-4">
+        <i class="fas fa-bars"></i>
+      </button>
+
+      <!-- Portfolio Text -->
+      <div class="text-2xl font-bold text-cyan-400">
+        Lalit's Portfolio
+      </div>
+    </div>
+
+    <!-- Nav Links -->
+    <ul class="flex flex-wrap items-center justify-center space-x-2 sm:space-x-4">
+      <li><a href="#home" class="px-3 py-1 border border-transparent rounded-lg hover:border-amber-400 hover:text-amber-400 transition-colors duration-300">Home</a></li>
+      <li><a href="#about" class="px-3 py-1 border border-transparent rounded-lg hover:border-amber-400 hover:text-amber-400 transition-colors duration-300">About</a></li>
+      <li><a href="#skills" class="px-3 py-1 border border-transparent rounded-lg hover:border-amber-400 hover:text-amber-400 transition-colors duration-300">Skills</a></li>
+      <li><a href="#services" class="px-3 py-1 border border-transparent rounded-lg hover:border-amber-400 hover:text-amber-400 transition-colors duration-300">Services</a></li>
+    </ul>
+  </nav>
+</header>
+
+<!-- Sidebar (Left Side) -->
+<div id="sidebar" class="fixed top-0 left-0 w-64 h-full bg-gray-900 shadow-lg transform -translate-x-full transition-transform duration-300 z-50">
+  <div class="p-4 flex justify-between items-center border-b border-gray-700">
+    <h2 class="text-xl font-bold text-cyan-400">Suggestions</h2>
+    <button id="close-btn" class="text-gray-300 hover:text-red-500 text-xl">
+      <i class="fas fa-times"></i>
+    </button>
+  </div>
+  <ul class="p-4 space-y-4 text-gray-300">
+    <li><a href="#skills" class="block hover:text-cyan-400">⭐ Check My Skills</a></li>
+    <li><a href="#services" class="block hover:text-cyan-400">💼 My Services</a></li>
+    <li><a href="contact.html" class="block hover:text-cyan-400">📩 Contact Me</a></li>
+    <li><a href="meraresume.pdf" class="block hover:text-cyan-400">📄 Download Resume</a></li>
+  </ul>
+</div>
+
+<!-- Overlay -->
+<div id="overlay" class="fixed inset-0 bg-black bg-opacity-50 hidden z-40"></div>
 
     <!-- Main Content -->
     <main>
@@ -138,9 +166,31 @@
                 loop: true
             });
         });
+
+  const menuBtn = document.getElementById('menu-btn');
+  const sidebar = document.getElementById('sidebar');
+  const closeBtn = document.getElementById('close-btn');
+  const overlay = document.getElementById('overlay');
+
+  menuBtn.addEventListener('click', () => {
+    sidebar.classList.remove('-translate-x-full');
+    overlay.classList.remove('hidden');
+  });
+
+  closeBtn.addEventListener('click', () => {
+    sidebar.classList.add('-translate-x-full');
+    overlay.classList.add('hidden');
+  });
+
+  overlay.addEventListener('click', () => {
+    sidebar.classList.add('-translate-x-full');
+    overlay.classList.add('hidden');
+  });
+
     </script>
 </body>
 </html>
+
 
 
 
