--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lalit Suthar - Software Engineer | Portfolio</title>
+
+  <link rel="icon" type="image/x-icon" href="favicon.ico?v=5">
+
   <!-- Font Awesome for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   
@@ -500,6 +503,7 @@ Streaming ideas into reality – presenting Jio Hotstar login page.</p>
 
 </body>
 </html>
+
 
 
 
