--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="UajuMoCH2t-doXRkYyf8cB4LGqx7Td-hb4kyyEABtn4" />
   <title>Lalit Suthar - Software Engineer | Portfolio</title>
 
   <link rel="icon" type="image/x-icon" href="favicon.png?v=5">
@@ -503,6 +504,7 @@ Streaming ideas into reality – presenting Jio Hotstar login page.</p>
 
 </body>
 </html>
+
 
 
 
