--- a/index.html
+++ b/index.html
@@ -497,6 +497,17 @@ Streaming ideas into reality – presenting Jio Hotstar login page.</p>
       loop: true
     });
   </script>
+  <!-- Google Structured Data for Logo -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Lalit Suthar Portfolio",
+  "url": "https://lalitsuthar45.github.io/",
+  "logo": "https://lalitsuthar45.github.io/favicon.png"
+}
+</script>
+
 
   <footer>
     <p>&copy; 2024 Lalit Suthar. All rights reserved.</p>
@@ -504,6 +515,7 @@ Streaming ideas into reality – presenting Jio Hotstar login page.</p>
 
 </body>
 </html>
+
 
 
 
