--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
     </div>
     <div class="hero-img">
       <!-- Placeholder image: Replace 'myimage.jpg' with your actual image path/URL -->
-      <img src="newimage.jpg" alt="Profile Picture">
+      <img src="myimage.jpg" alt="Profile Picture">
     </div>
   </section>
 
@@ -517,6 +517,7 @@ Streaming ideas into reality – presenting Jio Hotstar login page.</p>
 
 </body>
 </html>
+
 
 
 
