--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
   <!-- Header -->
   <header>
     <nav>
-      <div class="logo">Lalit's Portfolio</div>
+      <div class="logo">Lalit Portfolio</div>
       <ul>
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
@@ -517,6 +517,7 @@ Streaming ideas into reality – presenting Jio Hotstar login page.</p>
 
 </body>
 </html>
+
 
 
 
